st/mesa: fix renderbuffer pointer check in st_Clear()

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=30694

NOTE: This is a candidate for the 7.9 and 7.10 branches.